--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 h1 {
     color: red;
     font-size: 300px;
     font-family: Roboto, sans-serif;
+}
+
+.watch-info {
+    display: flex;
+    flex-direction: row;
 }
