--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -10,6 +11,9 @@
 h1, h2, h3, h4, h5, h6 {
     font-size: 4vw;
     text-transform: uppercase;
+}
+a{
+    text-decoration-color: #555;
 }
 
 .head{
@@ -23,6 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .watches__grid{
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 4vw;
@@ -37,12 +42,12 @@ h1, h2, h3, h4, h5, h6 {
 .watches__border{
     border: 1px solid #D8D8D8;
     border-radius: 10px;
-    box-shadow: 0 0 20px #D8D8D8;
+    box-shadow: 0 0 10px #D8D8D8;
     padding: 2vw;
 }
 .watches__model{
-    text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
     font-size: 1.6em;
     margin: 0 0 2vw 0;
 }
@@ -59,5 +64,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .watches__image{
-    /* Nothing to change there */
+    /* filter: brightness(1) saturate(1) contrast(1); */
 }
