--- a/assets/template/main.ejs
+++ b/assets/template/main.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="head">
-            <h1>We are scrapping this <a href="https://www.chronext.fr/rolex" target="_blank">website</a>.</h1>
+            <h1>We are scrapping <a href="https://www.chronext.fr/rolex" target="_blank">chronext</a>.</h1>
         </div>
 
         <div id="data">
