--- a/assets/template/chronext.ejs
+++ b/assets/template/chronext.ejs
@@ -9,6 +9,7 @@
     <body>
         <div class="head">
             <h1>We are scrapping <a href="https://www.chronext.fr/rolex" target="_blank">chronext</a>.</h1>
+            <p class="text__head">Go back to <a href="/">home page</a> ↗</p>
         </div>
 
         <div id="data">
