--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: Gavency;
+    src: url("Gavency Free Regular.otf") format("opentype");
+}
 
+/* GENERAL */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body{
+    background-color: #F9F9F9;
     font-family: 'Poppins', sans-serif;
     color: #333;
 }
@@ -12,14 +20,74 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 4vw;
     text-transform: uppercase;
 }
-a{
-    text-decoration-color: #555;
+a, a:visited{
+    color: #333;
+    text-decoration-color: #333;
 }
 
+a:hover{
+    text-decoration-color: #00561b;
+}
+.text__head{
+    text-underline-offset: .1vw;
+}
+
+/* INDEX.HTML */
+.title__banner{
+    font-size: 4.4vw;
+    line-height: 1em;
+    margin: 4.6% 10% 4% 10%;
+    font-weight: 900;
+}
+.body{
+    margin: 10%;
+}
+.text__button{
+    font-size: 1.6vw;
+    margin-bottom: 1%;
+}
+.button{
+    border: 1px solid #333;
+    padding: .8vw 8vw;
+    font-size: 1vw;
+}
+.button:hover{
+    background-color: #00561b;
+    color: white;
+    font-weight: 500;
+}
+.both{
+    margin-left: 14%;
+}
+footer{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-color: #333;
+    padding: 0 10vw 0 10vw;
+}
+.text__footer{
+    justify-content: flex-start;
+    color: white;
+    font-weight: 300;
+    font-size: 1vw;
+}
+.text_footer2{
+    padding-left: 34vw;
+    color: white;
+    font-weight: 300;
+    font-size: 1vw;
+}
+.text__footer > a{
+    color: white;
+}
+
+/* MAIN.EJS */
 .head{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 #data {
@@ -33,6 +101,7 @@ a{
     gap: 4vw;
 }
 .watches__list{
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,23 +109,23 @@ a{
 }
 
 .watches__border{
-    border: 1px solid #D8D8D8;
-    border-radius: 10px;
+    border: 1px solid #333;
+    border-radius: 4px;
     box-shadow: 0 0 10px #D8D8D8;
     padding: 2vw;
 }
 .watches__model{
     font-weight: 700;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Gavency', serif;
     font-size: 1.6em;
     margin: 0 0 2vw 0;
 }
 
 .watches__price{
     background-color: #333;
-    font-weight: 700;
+    font-weight: 300;
     font-size: 1vw;
-    border-radius: 4px;
+    border-radius: 1px;
     color: white;
     margin: 2vw 0 0 0;
     padding: .4vw 2vw;
@@ -65,4 +134,27 @@ a{
 
 .watches__image{
     /* filter: brightness(1) saturate(1) contrast(1); */
+}
+
+@media screen and (max-width: 720px) {
+    .head{
+        justify-items: left;
+        align-items: flex-start;
+        margin-left: 2%;
+    }
+    .watches__grid{
+        grid-template-columns: 1fr;
+        gap: 2vw;
+    }
+    .watches__price{
+        font-size: 4vw;
+    }
+    .watches__image{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .watches__image > img{
+        width: 60%;
+    }
 }
