--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,10 @@ footer{
     font-weight: 300;
     font-size: 1vw;
 }
+.text__footer > a:hover{
+    color: #D8D8D8;
+    text-decoration: none;
+}
 .text_footer2{
     padding-left: 34vw;
     color: white;
