--- a/assets/template/watchfinder.ejs
+++ b/assets/template/watchfinder.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="head">
-            <h1>We are scrapping <a href="https://www.chronext.fr/rolex" target="_blank">chronext</a>.</h1>
+            <h1>We are scrapping <a href="https://www.watchfinder.fr/" target="_blank">Watchfinder</a>.</h1>
             <p class="text__head">Go back to <a href="/">home page</a> ↗</p>
         </div>
 
